# vir_py-rs

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
tests/: test_exec.rs
vir_py-rs-type/: Cargo.toml
vir_py-rs-type/src/: base.rs  builtin.rs  export.rs  lib.rs  op.rs
vir_py-rs-type/tests/: op_test.rs
vir_py_rs_exec/: Cargo.toml
vir_py_rs_macro/: Cargo.toml
vir_py_rs_macro/src/: lib.rs
vir_py_rs_macro/tests/: macro_test.rs
vir_py_rs_parser/: Cargo.toml
vir_py_rs_parser/src/: error.rs  parser.rs  token.rs  tokenizer.rs
vir_py_rs_type/: Cargo.toml
vir_py_rs_type/src/: base.rs  builtin.rs  error.rs  exec_ctx.rs  lib.rs  op.rs  op_impl.rs  utils.rs
vir_py_rs_type/src/ast/: core.rs
vir_py_rs_type/tests/: base_test.rs  op_test.rs
virtual_exec_macro/: Cargo.toml
virtual_exec_macro/src/: lib.rs
virtual_exec_macro/tests/: macro_test.rs
virtual_exec_parser/: Cargo.toml
virtual_exec_parser/src/: parser.rs  tokenizer.rs
virtual_exec_type/: Cargo.toml  note.md
virtual_exec_type/src/: base.rs  error.rs  exec_ctx.rs  export.rs
virtual_exec_type/src/ast/: core.rs
virtual_exec_type/tests/: base_test.rs  op_test.rs
