[package]
name = "virtual_exec"
version = "0.1.0"
edition = "2024"

[dependencies]
virtual_exec_type = { path = "virtual_exec_type"}
virtual_exec_parser = { path = "virtual_exec_parser"}
bumpalo = "3.19.0"

[workspace]
members = [
    "virtual_exec_type",
    "virtual_exec_macro",
    "virtual_exec_parser",
]