[package]
name = "vir_py_rs_macro"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
vir_py_rs_type = { path = "../vir_py_rs_type" }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }