[package]
name = "vir_py_rs_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
vir_py_rs_type = { path = "../vir_py_rs_type" }
vir_py_rs_parser = { path = "../vir_py_rs_parser" }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }