[package]
name = "virtual_exec_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
virtual_exec_type = { path = "../virtual_exec_type" }
proc-macro2 = "1.0.103"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }